# legal_knowledge_graph

./: .gitignore  Dockerfile  README.md  SETUP_LOG.md  TECH_DOC.md  docker-compose.yml  pyproject.toml  run_all_ingestions.sh
config/: .env.example
data/: sample_act.json
frontend/: index.html
scripts/: ingest.py  ingest_pdf.py  ingest_regex.py  query.py  seed.py
src/api/: main.py
src/core/: config.py  exceptions.py
src/graph/: driver.py  repositories.py
src/ingestion/: graph_ingestion.py  parsers.py  pdf_parser.py  regex_parser.py
src/intelligence/: query_engine.py
src/models/: domain.py
src/services/: legal_service.py
src/utils/: logging.py
tests/integration/: test_api.py
tests/unit/: test_core.py
